[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/Player_Status/Player_Status.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.88, 0.4488, 0.4488, 0.666667 )

[node name="Player_Status" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Order" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life_Bar" type="ProgressBar" parent="Order"]
margin_right = 1024.0
margin_bottom = 10.0
rect_min_size = Vector2( 200, 10 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 100.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_Uses" type="HBoxContainer" parent="Order"]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 0
